--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@mui/material": "^5.10.9",
         "@mui/styled-engine-sc": "^5.10.6",
         "@prisma/client": "^4.3.1",
+        "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "cloudinary": "^1.32.0",
