--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
-    "name": "connect-backend",
+    "name": "connect-server",
     "version": "1.0.0",
+    "private": true,
     "description": "This is the back end of Connect application",
     "main": "index.js",
     "scripts": {
